@@ -1,9 +1,16 @@
 Release history for Dist-Zilla-Plugin-Author-KENTNL-Prereqs-Latest-Selective
 
 {{$NEXT}}
+ [00 Trivial]
+ - no code changes.
+ - whitespace adjustments
+
  [Dependencies::Stats]
  - Dependencies changed since 1.000000, see misc/*.deps* for details
  - develop: +1 (suggests: ↑1)
+
+ [Misc]
+ - Improve source side POD to reduce build side whitespace.
 
 1.000000 2014-08-02T05:44:00Z
  [00 Major]
